// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Facebook Video Block should render Default 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
      style="width: auto; height: auto;"
    >
      <div
        class="fb-video"
        data-allowfullscreen="true"
        data-autoplay="false"
        data-controls="true"
        data-href="https://www.facebook.com/100064959061177/videos/1310370486335266/"
        id=":r1:"
        style="width: 100%; height: 100%;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Facebook Video Block should render WithClassName 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <DocumentFragment>
    <div
-     class="css-rbixsl-FacebookVideoBlockWrapper eet15gy1"
+     class="extra-classname css-rbixsl-FacebookVideoBlockWrapper eet15gy1"
    >
      <div
        class="css-1pe9yew-FacebookVideoBlockPlayer eet15gy0"
        style="width: auto; height: auto;"
      >
@@ -10,11 +10,11 @@
          class="fb-video"
          data-allowfullscreen="true"
          data-autoplay="false"
          data-controls="true"
          data-href="https://www.facebook.com/100064959061177/videos/1310370486335266/"
-         id=":r0:"
+         id=":r2:"
          style="width: 100%; height: 100%;"
        />
      </div>
    </div>
  </DocumentFragment>"
`;
